--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: "..assets/images/images.jpg"
+	background-image: src= "..assets/images/images.jpg"
 	text-align: center;
 }
 
